--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "tamed-mailer",
-	"description": "A mailer to ease the Gmail and Office email sending.",
-	"version": "1.0.2",
+	"description": "A mailer to ease the Gmail and Microsoft Office 365 accounts' email sending.",
+	"version": "1.0.3",
 	"private": false,
 	"author": "MehmetKaplan",
 	"license": "MIT",
